k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: ghcr.io/akilan3585/wisecow:487eb2c
        ports:
        - containerPort: 4499
      imagePullSecrets:
        - name: ghcr-secret
